# prelegal

./: .gitignore  LICENSE  README.md  config.json  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/prelegal_backend/: auth.py  chat.py  db.py  documents.py  documents_router.py  main.py  nda_schema.py  settings.py  templates.py  users.py
backend/src/prelegal_backend/templates/: __init__.py  base.py  catalog.py  catalog_router.py  chat_engine.py  chat_router.py  generic.py  recommend_router.py  specs.py
backend/src/prelegal_backend/templates/ai_addendum/: __init__.py  spec.py
backend/src/prelegal_backend/templates/baa/: __init__.py  spec.py
backend/src/prelegal_backend/templates/csa/: __init__.py  spec.py
backend/src/prelegal_backend/templates/design_partner/: __init__.py  spec.py
backend/src/prelegal_backend/templates/dpa/: __init__.py  spec.py
backend/src/prelegal_backend/templates/mutual_nda/: __init__.py  schema.py  spec.py
backend/src/prelegal_backend/templates/mutual_nda_coverpage/: __init__.py  spec.py
backend/src/prelegal_backend/templates/partnership/: __init__.py  spec.py
backend/src/prelegal_backend/templates/pilot/: __init__.py  spec.py
backend/src/prelegal_backend/templates/psa/: __init__.py  spec.py
backend/src/prelegal_backend/templates/sla/: __init__.py  spec.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_documents_module.py  test_generic_template.py  test_nda_schema.py  test_recommend.py  test_schema_parity.py  test_templates.py  test_users.py
(+105 files in other folders)
