[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal V1 backend (FastAPI + SQLite)."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.40.0",
    "itsdangerous>=2.2.0",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.7.0",
    "litellm>=1.85.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prelegal_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
